solved the overflow problem

--- a/static/style.css
+++ b/static/style.css
@@ -70,7 +70,7 @@ html,body{
     display: none;
     flex-direction: column;
     align-items: center;
-    margin:100px;
+    margin:50px;
     width:90%;
 }
 .file-upload{
@@ -296,9 +296,10 @@ tr:hover {
     background: #d4edda;
     border: 1px solid #ccc;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    overflow: hidden;
+}
+#resume-pdf p{
+    overflow: hidden;
 }
 #resume-list-div{
     width:100%;
